openshift/app.service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
  creationTimestamp: null
  labels:
    app: openshift-intern-workshop
  name: openshift-intern-workshop
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: openshift-intern-workshop
    deploymentconfig: openshift-intern-workshop
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
