openshift/app.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: openshift-intern-workshop
  name: openshift-intern-workshop
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: openshift-intern-workshop
    weight: 100
  wildcardPolicy: None
status:
